@@ -48,6 +48,9 @@ GETTEXT_FILES = \
 PKGCONFIG_FILES = \
 	liblnk.pc.in
 
+SETUP_PY_FILES = \
+	setup.py
+
 SPEC_FILES = \
 	liblnk.spec \
 	liblnk.spec.in
@@ -56,6 +59,7 @@ EXTRA_DIST = \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
+	$(SETUP_PY_FILES) \
 	$(SPEC_FILES)
 
 MAINTAINERCLEANFILES = \
